--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -5,15 +5,60 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Home</title>
-  <!--  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
-  <link rel='stylesheet' type='text/css' media='screen' href='css/custom.css'>
-  <script src='js/portfolio.js'></script>
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel='stylesheet' type='text/css' media='screen' href='/static/css/custom.css'>
 </head>
 
 <body>
-  <h2>Home</h2>
+
+  <header>
+
+    <nav>
+
+      <p>Navigation</p>
+
+    </nav>
+
+  </header>
+
+  <main role="main">
+
+    <div class="container-fluid">
+
+      <div class="row">
+        <p>Introduction</p>
+      </div>
+
+      <div class="row">
+        <p>About</p>
+      </div>
+
+      <div class="row">
+        <p>Experience</p>
+      </div>
+
+      <div class="row">
+        <p>Projects</p>
+      </div>
+
+      <div class="row">
+        <p>Hobbies</p>
+      </div>
+
+    </div>
+
+  </main>
+
+  <footer>
+    <p>Footer</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src='/static/js/script.js'></script>
 </body>
 
 </html>
