--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -8,6 +8,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel='stylesheet' type='text/css' media='screen' href='/static/css/custom.css'>
 </head>
 
@@ -47,13 +48,44 @@
         <p>Hobbies</p>
       </div>
 
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
+
+          <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+
+            <li class="ms-3">
+              <a class="text-body-secondary" href="https://github.com/matthew-ashley-ctl" target="_blank">
+                <i class="bi bi-github" style="font-size: 2rem; color: cornflowerblue;"></i>
+              </a>
+            </li>
+
+            <li class="ms-3"><a class="text-body-secondary" href="https://www.linkedin.com/in/matthew-ashley-7b43b286/"
+                target="_blank">
+                <i class="bi bi-linkedin" style="font-size: 2rem; color: cornflowerblue;"></i>
+              </a>
+            </li>
+
+            <li class="ms-3">
+              <a class="text-body-secondary" href="https://discordapp.com/users/107259911812960256">
+                <i class="bi bi-discord" style="font-size: 2rem; color: cornflowerblue;"></i>
+              </a>
+            </li>
+
+            <li class="ms-3">
+              <a class="text-body-secondary" href="mailto:mtashley92@gmail.com">
+                <i class="bi bi-envelope-fill" style="font-size: 2rem; color: cornflowerblue;"></i>
+              </a>
+            </li>
+
+          </ul>
+
+        </footer>
+
+      </div>
+
     </div>
 
   </main>
-
-  <footer>
-    <p>Footer</p>
-  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
