--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Home</title>
+  <title>Borkfolio - Home</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,26 +14,60 @@
 
 <body>
 
-  <header>
-
-    <nav>
-
-      <p>Navigation</p>
-
-    </nav>
-
-  </header>
-
   <main role="main">
 
     <div class="container-fluid">
 
       <div class="row">
-        <p>Introduction</p>
+        <h4>Matthew Ashley</h4>
+        <p>Software developer specializing in back-end development and process automation</p>
       </div>
 
       <div class="row">
-        <p>About</p>
+        <h4>About Me</h4>
+        <p>
+          Hello there! My name is Matthew Ashley and I have been creating applications focused on business process
+          automation for 6+ years.
+        </p>
+
+        <p>
+          What first sparked my interest in programming was a Minecraft community around 2012-2013. I would sit in with
+          the
+          community's dedicated plugin developers and we would pitch ideas to each other about server events,
+          minigames, game overhauls, etc. They helped me get started with the basics of programming, and with some
+          dedication I was
+          eventually able to
+          assist with basic tasks and expansions on their existing work.
+        </p>
+
+        <p>
+          Over the next few years I worked in a network operations center, tasked with monitoring networking equipment,
+          managing outages, and resolving issues via remote device provisioning where possible. I used my downtime to
+          build
+          various tools in Python and
+          Javascript to automate tedious day-to-day tasks, utilizing various internal and third-party APIs, and shared
+          those tools within the work group. I learned the proprietary
+          query language for the company's log
+          aggregation and data visualization software, and managers would send me requests for various charts and
+          reports.
+        </p>
+
+        <p>
+          In 2017 a small group of friends and I decided to pursue our shared interest in game development, and we
+          founded an
+          LLC by the name of tinyEnt. We used our free time to develop our first creation - a free game written in C#
+          with both
+          endless
+          runner and shoot-em-up elements titled "Creamed".
+        </p>
+
+        <p>
+          In late 2017 I secured a software developer position at Lumen Technologies, in a small group focused on
+          business
+          process
+          improvement and automation. I've been writing software focused on business process automation since then.
+        </p>
+
       </div>
 
       <div class="row">
@@ -59,7 +93,8 @@
               </a>
             </li>
 
-            <li class="ms-3"><a class="text-body-secondary" href="https://www.linkedin.com/in/matthew-ashley-7b43b286/"
+            <li class="ms-3">
+              <a class="text-body-secondary" href="https://www.linkedin.com/in/matthew-ashley-7b43b286/"
                 target="_blank">
                 <i class="bi bi-linkedin" style="font-size: 2rem; color: cornflowerblue;"></i>
               </a>
