WIP: Home page text content

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 
 <head>
   <meta charset='utf-8'>
@@ -16,70 +16,145 @@
 
   <main role="main">
 
-    <div class="container-fluid">
+    <div class="container">
 
       <div class="row">
+
         <h4>Matthew Ashley</h4>
-        <p>Software developer specializing in back-end development and process automation</p>
+
+        <p>
+          Senior software developer at Lumen Technologies specializing in back-end development and process automation
+        </p>
+
       </div>
 
       <div class="row">
+
         <h4>About Me</h4>
+
         <p>
-          Hello there! My name is Matthew Ashley and I have been creating applications focused on business process
-          automation for 6+ years.
+          Hello there! My name is Matthew, and my interest in creating video game content is what jumpstarted my
+          journey into software development. Professionally, I've been developing software focused on business process
+          automation for the past 6+ years.
         </p>
 
         <p>
-          What first sparked my interest in programming was a Minecraft community around 2012-2013. I would sit in with
-          the
-          community's dedicated plugin developers and we would pitch ideas to each other about server events,
-          minigames, game overhauls, etc. They helped me get started with the basics of programming, and with some
-          dedication I was
-          eventually able to
-          assist with basic tasks and expansions on their existing work.
+          What first sparked my interest in programming was participation in custom plugin development for a Minecraft
+          community around 2012-2013. I would sit in with the community's dedicated plugin developers and we would
+          pitch ideas to each other for custom server events, minigames, game overhauls, etc. They helped me get
+          started with the basics of programming, and with some dedication I was eventually able to assist with basic
+          tasks and expansions to their work.
         </p>
 
         <p>
-          Over the next few years I worked in a network operations center, tasked with monitoring networking equipment,
-          managing outages, and resolving issues via remote device provisioning where possible. I used my downtime to
-          build
-          various tools in Python and
-          Javascript to automate tedious day-to-day tasks, utilizing various internal and third-party APIs, and shared
-          those tools within the work group. I learned the proprietary
-          query language for the company's log
-          aggregation and data visualization software, and managers would send me requests for various charts and
-          reports.
+          Over the next few years I worked in a network operations center, tasked with monitoring networking
+          equipment, managing outages, and resolving issues via remote device provisioning where possible. I used my
+          downtime to build various tools with Python and Javascript to automate tedious day-to-day tasks, utilizing
+          various internal and third-party APIs, and shared those tools within the work group. I learned the
+          proprietary query language for the company's log aggregation and data visualization software, and managers
+          would send me requests for various charts and reports.
         </p>
 
         <p>
           In 2017 a small group of friends and I decided to pursue our shared interest in game development, and we
-          founded an
-          LLC by the name of tinyEnt. We used our free time to develop our first creation - a free game written in C#
-          with both
-          endless
-          runner and shoot-em-up elements titled "Creamed".
+          founded an LLC by the name of tinyEnt. We used our free time to develop our first creation - a free game
+          written in Unity with both endless runner and shoot-em-up elements titled "Creamed".
         </p>
 
         <p>
           In late 2017 I secured a software developer position at Lumen Technologies, in a small group focused on
-          business
-          process
-          improvement and automation. I've been writing software focused on business process automation since then.
+          business process improvement and automation. The team has grown substantially since I first joined, and I've
+          contributed numerous improvements to our workflow over the years, from setting up automation health
+          alert notifications to the design and implementation of a robust and resilient framework optimized for our
+          team's needs. Today, I handle new projects, team training, code reviews, technical interviews, database
+          management, reporting, and everything in between.
         </p>
 
       </div>
 
+
       <div class="row">
-        <p>Experience</p>
+
+        <h4>Experience</h4>
+        <div class="col-12">
+
+          <h5>
+            Languages
+          </h5>
+          <ul>
+            <li>Python</li>
+            <li>C#</li>
+            <li>Javascript</li>
+            <li>VB.net</li>
+          </ul>
+
+        </div>
+
+        <div class="col-12">
+          <h5>
+            Database
+          </h5>
+          <ul>
+            <li>Microsoft SQL Server</li>
+            <li>MongoDB</li>
+            <li>OracleDB</li>
+            <li>PostgreSQL</li>
+          </ul>
+
+        </div>
+
+        <div class="col-12">
+          <h5>
+            Software
+          </h5>
+          <ul>
+            <li>Git</li>
+            <li>Docker</li>
+            <li>Postman</li>
+            <li>UiPath</li>
+          </ul>
+        </div>
+
+        <div class="col-12">
+
+          <h5>
+            Miscellaneous
+          </h5>
+
+          <ul>
+            <li>REST/SOAP API Design and Implementation</li>
+            <li>Linux Development Environment</li>
+            <li>AWS Deployment</li>
+            <li>GitLab CI/CD</li>
+            <li>Splunk</li>
+          </ul>
+
+        </div>
+
       </div>
 
       <div class="row">
-        <p>Projects</p>
+        <h4>Projects</h4>
+
+        <ul>
+          <li>Video Surveillance Tuner</li>
+          <li>Prism Weather Alerts</li>
+          <li>Creamed</li>
+          <li>CORPI Automation Framework</li>
+        </ul>
+
       </div>
 
       <div class="row">
-        <p>Hobbies</p>
+        <h4>Interests</h4>
+
+        <ul>
+          <li>Video Games</li>
+          <li>Board Games</li>
+          <li>Pets</li>
+          <li>Anime</li>
+        </ul>
+
       </div>
 
       <div class="container">
