WIP: Site responsiveness

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -18,9 +18,9 @@
 
     <div class="container">
 
-      <div class="row">
+      <h4>Matthew Ashley</h4>
 
-        <h4>Matthew Ashley</h4>
+      <div class="row">
 
         <p>
           Senior software developer at Lumen Technologies specializing in back-end development and process automation
@@ -28,9 +28,9 @@
 
       </div>
 
-      <div class="row">
+      <h4>About Me</h4>
 
-        <h4>About Me</h4>
+      <div class="row">
 
         <p>
           Hello there! My name is Matthew, and my interest in creating video game content is what jumpstarted my
@@ -51,7 +51,7 @@
           equipment, managing outages, and resolving issues via remote device provisioning where possible. I used my
           downtime to build various tools with Python and Javascript to automate tedious day-to-day tasks, utilizing
           various internal and third-party APIs, and shared those tools within the work group. I learned the
-          proprietary query language for the company's log aggregation and data visualization software, and managers
+          query language for the company's log aggregation and data visualization software, and managers
           would send me requests for various charts and reports.
         </p>
 
@@ -64,96 +64,189 @@
         <p>
           In late 2017 I secured a software developer position at Lumen Technologies, in a small group focused on
           business process improvement and automation. The team has grown substantially since I first joined, and I've
-          contributed numerous improvements to our workflow over the years, from setting up automation health
-          alert notifications to the design and implementation of a robust and resilient framework optimized for our
-          team's needs. Today, I handle new projects, team training, code reviews, technical interviews, database
-          management, reporting, and everything in between.
+          contributed numerous improvements to our workflow over the years - from implementation of automation health
+          alert notifications to the design of a robust and resilient framework optimized for our team's needs. Today, I
+          handle new projects, team mentoring, code reviews, technical interviews, database management, reporting, and
+          everything in between.
         </p>
 
       </div>
 
+      <h4 class="text-center">Experience</h4>
 
       <div class="row">
 
-        <h4>Experience</h4>
-        <div class="col-12">
+        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
 
-          <h5>
-            Languages
-          </h5>
-          <ul>
-            <li>Python</li>
-            <li>C#</li>
-            <li>Javascript</li>
-            <li>VB.net</li>
-          </ul>
+          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
+
+            <div class="col">
+
+              <div class="card mx-auto" style="width: 18rem;">
+
+                <div class="card-body">
+                  <h5 class="card-title text-center">Languages</h5>
+                </div>
+
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">C#</li>
+                  <li class="list-group-item">Python</li>
+                  <li class="list-group-item">Javascript</li>
+                  <li class="list-group-item">VB.net</li>
+                </ul>
+
+              </div>
+
+            </div>
+
+          </div>
 
         </div>
 
-        <div class="col-12">
-          <h5>
-            Database
-          </h5>
-          <ul>
-            <li>Microsoft SQL Server</li>
-            <li>MongoDB</li>
-            <li>OracleDB</li>
-            <li>PostgreSQL</li>
-          </ul>
+        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
+
+          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
+
+            <div class="col">
+
+              <div class="card mx-auto" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Database</h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Microsoft SQL Server</li>
+                  <li class="list-group-item">MongoDB</li>
+                  <li class="list-group-item">OracleDB</li>
+                  <li class="list-group-item">PostgreSQL</li>
+                </ul>
+              </div>
+
+            </div>
+
+          </div>
 
         </div>
 
-        <div class="col-12">
-          <h5>
-            Software
-          </h5>
-          <ul>
-            <li>Git</li>
-            <li>Docker</li>
-            <li>Postman</li>
-            <li>UiPath</li>
-          </ul>
+
+        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
+
+          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
+
+            <div class="col">
+
+              <div class="card mx-auto" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Software</h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Git</li>
+                  <li class="list-group-item">UiPath</li>
+                  <li class="list-group-item">Docker</li>
+                  <li class="list-group-item">Postman</li>
+                </ul>
+              </div>
+
+            </div>
+
+          </div>
+
         </div>
 
-        <div class="col-12">
+        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
 
-          <h5>
-            Miscellaneous
-          </h5>
+          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
 
-          <ul>
-            <li>REST/SOAP API Design and Implementation</li>
-            <li>Linux Development Environment</li>
-            <li>AWS Deployment</li>
-            <li>GitLab CI/CD</li>
-            <li>Splunk</li>
-          </ul>
+            <div class="col">
+
+              <div class="card mx-auto" style="width: 18rem;">
+
+                <div class="card-body">
+                  <h5 class="card-title text-center">Miscellaneous</h5>
+                </div>
+
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">REST/SOAP API</li>
+                  <li class="list-group-item">Linux Development</li>
+                  <li class="list-group-item">AWS Deployment</li>
+                  <li class="list-group-item">GitLab CI/CD</li>
+                </ul>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <h4>Interests</h4>
+
+      <div class="row align-items-center justify-content-between">
+
+        <div class="col-3">
+
+          <div class="card" style="width: 18rem;">
+
+            <i class="bi bi-joystick card-image-top text-center" style="font-size: 5rem;"></i>
+
+            <div class="card-body">
+
+              <h5 class="card-title text-center mb-3">Video Games</h5>
+
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="col-3">
+
+          <div class="card" style="width: 18rem;">
+
+            <i class="bi bi-dice-3-fill card-image-top text-center" style="font-size: 5rem;"></i>
+
+            <div class="card-body">
+
+              <h5 class="card-title text-center mb-3">Board Games</h5>
+
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="col-3">
+
+          <div class="card" style="width: 18rem;">
+
+            <i class="bi bi-tools card-image-top text-center" style="font-size: 5rem;"></i>
+
+            <div class="card-body">
+
+              <h5 class="card-title text-center mb-3">Home Lab</h5>
+
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+
+            </div>
+
+          </div>
 
         </div>
 
       </div>
 
       <div class="row">
-        <h4>Projects</h4>
 
-        <ul>
-          <li>Video Surveillance Tuner</li>
-          <li>Prism Weather Alerts</li>
-          <li>Creamed</li>
-          <li>CORPI Automation Framework</li>
-        </ul>
-
-      </div>
-
-      <div class="row">
-        <h4>Interests</h4>
-
-        <ul>
-          <li>Video Games</li>
-          <li>Board Games</li>
-          <li>Pets</li>
-          <li>Anime</li>
-        </ul>
+        <h5>Bonus - Pets</h5>
 
       </div>
 
