WIP: Site responsiveness

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -76,104 +76,72 @@
 
       <div class="row">
 
-        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
+        <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
 
-          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
+          <div class="card mx-auto" style="width: 14rem;">
 
-            <div class="col">
-
-              <div class="card mx-auto" style="width: 18rem;">
-
-                <div class="card-body">
-                  <h5 class="card-title text-center">Languages</h5>
-                </div>
-
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">C#</li>
-                  <li class="list-group-item">Python</li>
-                  <li class="list-group-item">Javascript</li>
-                  <li class="list-group-item">VB.net</li>
-                </ul>
-
-              </div>
-
+            <div class="card-body">
+              <h5 class="card-title text-center">Languages</h5>
             </div>
+
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">C#</li>
+              <li class="list-group-item">Python</li>
+              <li class="list-group-item">Javascript</li>
+              <li class="list-group-item">VB.net</li>
+            </ul>
 
           </div>
 
         </div>
 
-        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
+        <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
 
-          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
-
-            <div class="col">
-
-              <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title text-center">Database</h5>
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Microsoft SQL Server</li>
-                  <li class="list-group-item">MongoDB</li>
-                  <li class="list-group-item">OracleDB</li>
-                  <li class="list-group-item">PostgreSQL</li>
-                </ul>
-              </div>
-
+          <div class="card mx-auto" style="width: 14rem;">
+            <div class="card-body">
+              <h5 class="card-title text-center">Database</h5>
             </div>
-
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Microsoft SQL Server</li>
+              <li class="list-group-item">MongoDB</li>
+              <li class="list-group-item">OracleDB</li>
+              <li class="list-group-item">PostgreSQL</li>
+            </ul>
           </div>
 
         </div>
 
 
-        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
+        <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
 
-          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
-
-            <div class="col">
-
-              <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title text-center">Software</h5>
-                </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Git</li>
-                  <li class="list-group-item">UiPath</li>
-                  <li class="list-group-item">Docker</li>
-                  <li class="list-group-item">Postman</li>
-                </ul>
-              </div>
-
+          <div class="card mx-auto" style="width: 14rem;">
+            <div class="card-body">
+              <h5 class="card-title text-center">Software</h5>
             </div>
-
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Git</li>
+              <li class="list-group-item">UiPath</li>
+              <li class="list-group-item">Docker</li>
+              <li class="list-group-item">Postman</li>
+            </ul>
           </div>
 
         </div>
 
-        <div class="col col-sm-12 col-md-6 col-xxl-3 my-4">
+        <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
 
-          <div class="row justify-content-start justify-content-lg-around justify-content-xxl-start">
+          <div class="card mx-auto" style="width: 14rem;">
 
-            <div class="col">
-
-              <div class="card mx-auto" style="width: 18rem;">
-
-                <div class="card-body">
-                  <h5 class="card-title text-center">Miscellaneous</h5>
-                </div>
-
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">REST/SOAP API</li>
-                  <li class="list-group-item">Linux Development</li>
-                  <li class="list-group-item">AWS Deployment</li>
-                  <li class="list-group-item">GitLab CI/CD</li>
-                </ul>
-
-              </div>
-
+            <div class="card-body">
+              <h5 class="card-title text-center">Miscellaneous</h5>
             </div>
+
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">REST/SOAP API</li>
+              <li class="list-group-item">Linux Development</li>
+              <li class="list-group-item">AWS Deployment</li>
+              <li class="list-group-item">GitLab CI/CD</li>
+            </ul>
 
           </div>
 
@@ -181,13 +149,13 @@
 
       </div>
 
-      <h4>Interests</h4>
+      <h4 class="text-center">Interests</h4>
 
-      <div class="row align-items-center justify-content-between">
+      <div class="row justify-content-center gy-3">
 
-        <div class="col-3">
+        <div class="col-lg-3">
 
-          <div class="card" style="width: 18rem;">
+          <div class="card mx-auto" style="width: 14rem;">
 
             <i class="bi bi-joystick card-image-top text-center" style="font-size: 5rem;"></i>
 
@@ -195,7 +163,8 @@
 
               <h5 class="card-title text-center mb-3">Video Games</h5>
 
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's
                 content.</p>
 
             </div>
@@ -204,9 +173,9 @@
 
         </div>
 
-        <div class="col-3">
+        <div class="col-lg-3">
 
-          <div class="card" style="width: 18rem;">
+          <div class="card mx-auto" style="width: 14rem;">
 
             <i class="bi bi-dice-3-fill card-image-top text-center" style="font-size: 5rem;"></i>
 
@@ -214,7 +183,8 @@
 
               <h5 class="card-title text-center mb-3">Board Games</h5>
 
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's
                 content.</p>
 
             </div>
@@ -223,9 +193,9 @@
 
         </div>
 
-        <div class="col-3">
+        <div class="col-lg-3">
 
-          <div class="card" style="width: 18rem;">
+          <div class="card mx-auto" style="width: 14rem;">
 
             <i class="bi bi-tools card-image-top text-center" style="font-size: 5rem;"></i>
 
@@ -233,7 +203,8 @@
 
               <h5 class="card-title text-center mb-3">Home Lab</h5>
 
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card's
                 content.</p>
 
             </div>
@@ -243,6 +214,9 @@
         </div>
 
       </div>
+
+
+
 
       <div class="row">
 
