WIP: Site layout and responsiveness

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -18,71 +18,105 @@
 
     <div class="container">
 
-      <h4>Matthew Ashley</h4>
+      <div class="row justify-content-center mt-5">
 
-      <div class="row">
+        <div class="col col-sm-8 col-md-6 col-lg-5">
 
-        <p>
-          Senior software developer at Lumen Technologies specializing in back-end development and process automation
-        </p>
+          <div class="card align-middle mx-auto">
 
-      </div>
+            <h1 class="card-header text-center">Matthew Ashley</h1>
 
-      <h4>About Me</h4>
+            <div class="card-body text-center">
+              Senior software developer at Lumen Technologies specializing in back-end development and process
+              automation
+            </div>
 
-      <div class="row">
+          </div>
 
-        <p>
-          Hello there! My name is Matthew, and my interest in creating video game content is what jumpstarted my
-          journey into software development. Professionally, I've been developing software focused on business process
-          automation for the past 6+ years.
-        </p>
-
-        <p>
-          What first sparked my interest in programming was participation in custom plugin development for a Minecraft
-          community around 2012-2013. I would sit in with the community's dedicated plugin developers and we would
-          pitch ideas to each other for custom server events, minigames, game overhauls, etc. They helped me get
-          started with the basics of programming, and with some dedication I was eventually able to assist with basic
-          tasks and expansions to their work.
-        </p>
-
-        <p>
-          Over the next few years I worked in a network operations center, tasked with monitoring networking
-          equipment, managing outages, and resolving issues via remote device provisioning where possible. I used my
-          downtime to build various tools with Python and Javascript to automate tedious day-to-day tasks, utilizing
-          various internal and third-party APIs, and shared those tools within the work group. I learned the
-          query language for the company's log aggregation and data visualization software, and managers
-          would send me requests for various charts and reports.
-        </p>
-
-        <p>
-          In 2017 a small group of friends and I decided to pursue our shared interest in game development, and we
-          founded an LLC by the name of tinyEnt. We used our free time to develop our first creation - a free game
-          written in Unity with both endless runner and shoot-em-up elements titled "Creamed".
-        </p>
-
-        <p>
-          In late 2017 I secured a software developer position at Lumen Technologies, in a small group focused on
-          business process improvement and automation. The team has grown substantially since I first joined, and I've
-          contributed numerous improvements to our workflow over the years - from implementation of automation health
-          alert notifications to the design of a robust and resilient framework optimized for our team's needs. Today, I
-          handle new projects, team mentoring, code reviews, technical interviews, database management, reporting, and
-          everything in between.
-        </p>
+        </div>
 
       </div>
 
-      <h4 class="text-center">Experience</h4>
+      <div class="row justify-content-center mt-5">
 
-      <div class="row">
+        <div class="col col-md-10">
+
+          <div class="card mx-auto">
+
+            <h4 class="text-center card-header">About Me</h4>
+
+            <div class="card-body">
+
+              <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4 float-end ms-2 mt-auto mb-2">
+                <img src="/static/img/377918962_1051789126002287_4075590018076667559_n.jpg"
+                  class="img-fluid rounded float-end" alt="...">
+              </div>
+
+              <p>
+                Hello there! My name is Matthew, and my interest in creating video game content is what jumpstarted my
+                journey into software development. Professionally, I've been developing software focused on business
+                process
+                automation for the past 6+ years.
+              </p>
+
+              <p>
+                What first sparked my interest in programming was participation in custom plugin development for a
+                Minecraft
+                community around 2012-2013. I would sit in with the community's dedicated plugin developers and we would
+                pitch ideas to each other for custom server events, minigames, game overhauls, etc. They helped me get
+                started with the basics of programming, and with some dedication I was eventually able to assist with
+                basic
+                tasks and expansions to their work.
+              </p>
+
+              <p>
+                Over the next few years I worked in a network operations center, tasked with monitoring networking
+                equipment, managing outages, and resolving issues via remote device provisioning where possible. I used
+                my
+                downtime to build various tools with Python and Javascript to automate tedious day-to-day tasks,
+                utilizing
+                various internal and third-party APIs, and shared those tools within the work group. I learned the
+                query language for the company's log aggregation and data visualization software, and managers
+                would send me requests for various charts and reports.
+              </p>
+
+              <p>
+                In 2017 a small group of friends and I decided to pursue our shared interest in game development, and we
+                founded an LLC by the name of tinyEnt. We used our free time to develop our first creation - a free game
+                written in Unity with both endless runner and shoot-em-up elements titled "Creamed".
+              </p>
+
+              <p>
+                In late 2017 I secured a software developer position at Lumen Technologies, in a small group focused on
+                business process improvement and automation. The team has grown substantially since I first joined, and
+                I've
+                contributed numerous improvements to our workflow over the years - from implementation of automation
+                health
+                alert notifications to the design of a robust and resilient framework optimized for our team's needs.
+                Today, I
+                handle new projects, team mentoring, code reviews, technical interviews, database management, reporting,
+                and
+                everything in between.
+              </p>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+      <div class="row mt-5">
+
+        <h4 class="text-center">Tech Deck</h4>
 
         <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
 
           <div class="card mx-auto" style="width: 14rem;">
 
-            <div class="card-body">
-              <h5 class="card-title text-center">Languages</h5>
-            </div>
+            <h5 class="card-header text-center">Languages</h5>
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item">C#</li>
@@ -98,9 +132,7 @@
         <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
 
           <div class="card mx-auto" style="width: 14rem;">
-            <div class="card-body">
-              <h5 class="card-title text-center">Database</h5>
-            </div>
+            <h5 class="card-header text-center">Database</h5>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Microsoft SQL Server</li>
               <li class="list-group-item">MongoDB</li>
@@ -115,9 +147,7 @@
         <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
 
           <div class="card mx-auto" style="width: 14rem;">
-            <div class="card-body">
-              <h5 class="card-title text-center">Software</h5>
-            </div>
+            <h5 class="card-header text-center">Software</h5>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Git</li>
               <li class="list-group-item">UiPath</li>
@@ -132,9 +162,7 @@
 
           <div class="card mx-auto" style="width: 14rem;">
 
-            <div class="card-body">
-              <h5 class="card-title text-center">Miscellaneous</h5>
-            </div>
+            <h5 class="card-header text-center">Miscellaneous</h5>
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item">REST/SOAP API</li>
@@ -149,13 +177,14 @@
 
       </div>
 
-      <h4 class="text-center">Interests</h4>
 
-      <div class="row justify-content-center gy-3">
+      <div class="row justify-content-center">
+
+        <h4 class="text-center my-5">Interests</h4>
 
         <div class="col-lg-3">
 
-          <div class="card mx-auto" style="width: 14rem;">
+          <div class="card mx-auto my-3" style="width: 14rem;">
 
             <i class="bi bi-joystick card-image-top text-center" style="font-size: 5rem;"></i>
 
@@ -175,13 +204,13 @@
 
         <div class="col-lg-3">
 
-          <div class="card mx-auto" style="width: 14rem;">
+          <div class="card mx-auto my-3" style="width: 14rem;">
 
             <i class="bi bi-dice-3-fill card-image-top text-center" style="font-size: 5rem;"></i>
 
             <div class="card-body">
 
-              <h5 class="card-title text-center mb-3">Board Games</h5>
+              <h5 class="card-title text-center mb-3">Tabletop Games</h5>
 
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                 card's
@@ -195,7 +224,7 @@
 
         <div class="col-lg-3">
 
-          <div class="card mx-auto" style="width: 14rem;">
+          <div class="card mx-auto my-3" style="width: 14rem;">
 
             <i class="bi bi-tools card-image-top text-center" style="font-size: 5rem;"></i>
 
@@ -216,49 +245,43 @@
       </div>
 
 
+      <div class="row mt-5">
 
-
-      <div class="row">
-
-        <h5>Bonus - Pets</h5>
+        <h5 class="text-center">Bonus - Pets</h5>
 
       </div>
 
-      <div class="container">
-        <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
+      <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
 
-          <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+        <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
 
-            <li class="ms-3">
-              <a class="text-body-secondary" href="https://github.com/matthew-ashley-ctl" target="_blank">
-                <i class="bi bi-github" style="font-size: 2rem; color: cornflowerblue;"></i>
-              </a>
-            </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="https://github.com/matthew-ashley-ctl" target="_blank">
+              <i class="bi bi-github" style="font-size: 2rem; color: cornflowerblue;"></i>
+            </a>
+          </li>
 
-            <li class="ms-3">
-              <a class="text-body-secondary" href="https://www.linkedin.com/in/matthew-ashley-7b43b286/"
-                target="_blank">
-                <i class="bi bi-linkedin" style="font-size: 2rem; color: cornflowerblue;"></i>
-              </a>
-            </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="https://www.linkedin.com/in/matthew-ashley-7b43b286/" target="_blank">
+              <i class="bi bi-linkedin" style="font-size: 2rem; color: cornflowerblue;"></i>
+            </a>
+          </li>
 
-            <li class="ms-3">
-              <a class="text-body-secondary" href="https://discordapp.com/users/107259911812960256">
-                <i class="bi bi-discord" style="font-size: 2rem; color: cornflowerblue;"></i>
-              </a>
-            </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="https://discordapp.com/users/107259911812960256" target="_blank">
+              <i class="bi bi-discord" style="font-size: 2rem; color: cornflowerblue;"></i>
+            </a>
+          </li>
 
-            <li class="ms-3">
-              <a class="text-body-secondary" href="mailto:mtashley92@gmail.com">
-                <i class="bi bi-envelope-fill" style="font-size: 2rem; color: cornflowerblue;"></i>
-              </a>
-            </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="mailto:mtashley92@gmail.com">
+              <i class="bi bi-envelope-fill" style="font-size: 2rem; color: cornflowerblue;"></i>
+            </a>
+          </li>
 
-          </ul>
+        </ul>
 
-        </footer>
-
-      </div>
+      </footer>
 
     </div>
 
