Reduce space between tech deck cards

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -112,11 +112,11 @@
           </div>
         </div>
 
-        <div class="row mt-5">
+        <div class="row mt-5 justify-content-center">
           <h4 class="text-center">Tech Deck</h4>
 
-          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
-            <div class="card mx-auto" style="width: 14rem">
+          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+            <div class="card mx-auto" style="width: 12rem">
               <h5 class="card-header text-center">Languages</h5>
 
               <ul class="list-group list-group-flush">
@@ -129,8 +129,8 @@
             </div>
           </div>
 
-          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
-            <div class="card mx-auto" style="width: 14rem">
+          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+            <div class="card mx-auto" style="width: 12rem">
               <h5 class="card-header text-center">Database</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">Microsoft SQL Server</li>
@@ -142,8 +142,8 @@
             </div>
           </div>
 
-          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
-            <div class="card mx-auto" style="width: 14rem">
+          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+            <div class="card mx-auto" style="width: 12rem">
               <h5 class="card-header text-center">Software</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">Git</li>
@@ -155,8 +155,8 @@
             </div>
           </div>
 
-          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-3 my-4">
-            <div class="card mx-auto" style="width: 14rem">
+          <div class="col col-sm-12 col-md-6 col-lg-3 col-xxl-2 my-4">
+            <div class="card mx-auto" style="width: 12rem">
               <h5 class="card-header text-center">Miscellaneous</h5>
 
               <ul class="list-group list-group-flush">
