--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -24,16 +24,93 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item text-center">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item text-center">
+              <a class="nav-link" href="/about">About Site</a>
+            </li>
+            <li class="nav-item text-center">
+              <a class="nav-link" href="/docs">API Docs</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- <nav
+      class="navbar navbar-right navbar-expand-md fixed-top bg-dark border-bottom"
+      aria-label="Borkfolio navigation header"
+    >
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler collapsed justify-content-center"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div
+          class="navbar-collapse collapse justify-content-center"
+          id="navbarCollapse"
+        >
+          <ul class="navbar-nav ms-3 mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/"> Home </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/about">
+                Site Info
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/docs">
+                API Docs
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav> -->
+
     <main role="main">
       <div class="container">
-        <div class="row justify-content-center mt-5">
-          <div class="col col-sm-8 col-md-6 col-lg-5">
-            <div class="card align-middle mx-auto">
-              <h1 class="card-header text-center">Matthew Ashley</h1>
+        <div class="mt-md-3 mt-lg-4 mt-xxl-5 pt-3 pt-lg-4 pt-xxl-4"></div>
+        <div class="mt-md-3 mt-lg-4 mt-xxl-5 pt-3 pt-lg-4 pt-xxl-4"></div>
 
-              <div class="card-body text-center">
-                Senior software developer at Lumen Technologies specializing in
-                back-end development and process automation
+        <div class="row">
+          <div
+            class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
+          >
+            <div class="col-sm-9 p-lg-5 mx-auto mt-5">
+              <div class="card">
+                <h1 class="card-header display-4 fw-normal">Matthew Ashley</h1>
+                <p class="card-body lead fw-normal">
+                  Senior software developer at Lumen Technologies specializing
+                  in back-end development and process automation
+                </p>
               </div>
             </div>
           </div>
@@ -112,6 +189,19 @@
           </div>
         </div>
 
+        <div class="row justify-content-center mt-5">
+          <div class="col col-sm-8 col-md-6 col-lg-5">
+            <div class="card align-middle mx-auto">
+              <h1 class="card-header text-center">Matthew Ashley</h1>
+
+              <div class="card-body text-center">
+                Senior software developer at Lumen Technologies specializing in
+                back-end development and process automation
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="row mt-5 justify-content-center">
           <h4 class="text-center">Tech Deck</h4>
 
@@ -184,8 +274,8 @@
                 <h5 class="card-title text-center mb-3">Video Games</h5>
 
                 <p class="card-text">
-                  From retro to cutting edge, I've always got an eye out out for
-                  unique and innovative game designs.
+                  From retro to cutting edge, I love encountering unique and
+                  innovative game designs.
                 </p>
               </div>
             </div>
@@ -202,8 +292,8 @@
                 <h5 class="card-title text-center mb-3">Tabletop Games</h5>
 
                 <p class="card-text">
-                  A significant portion of living room wall space is dedicated
-                  to our board game library.
+                  Our board game library occupies a significant portion of our
+                  living room wall space.
                 </p>
               </div>
             </div>
@@ -220,16 +310,12 @@
                 <h5 class="card-title text-center mb-3">Home Lab</h5>
 
                 <p class="card-text">
-                  I use a Synology DS920 to run an assortment of utility
-                  applications on my local network.
+                  I run an assortment of utility applications on my local
+                  network using a Synology DS920.
                 </p>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="row mt-5">
-          <h5 class="text-center">Bonus - Pets</h5>
         </div>
 
         <footer
